force-app/main/default/objects/Assessment__c/fields/Affiliation_Fee_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Fee_Form_Submitted_Date__c</fullName>
    <label>Affiliation Fee Form Submitted Date</label>
    <type>Date</type>
</CustomField>