force-app/main/default/objects/Assessment__c/fields/AIM_Fee_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>AIM_Fee_Form_Submitted_Date__c</fullName>
    <label>AIM Fee Form Submitted Date</label>
    <type>Date</type>
</CustomField>