force-app/main/default/objects/Assessment__c/fields/Attachment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Notes__c</fullName>
    <label>Attachment Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>