force-app/main/default/objects/Assessment__c/fields/Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Completed_Date__c</fullName>
    <label>Audit Completed Date</label>
    <type>Date</type>
</CustomField>