force-app/main/default/objects/Assessment__c/fields/Background_Checks_Text__c.field-meta.xml
<CustomField>
    <fullName>Background_Checks_Text__c</fullName>
    <label>Background Checks Text</label>
    <type>TextArea</type>
</CustomField>