force-app/main/default/objects/Assessment__c/fields/Books_and_Records__c.field-meta.xml
<CustomField>
    <fullName>Books_and_Records__c</fullName>
    <label>Books and Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>