force-app/main/default/objects/Assessment__c/fields/Books_and_Records_Text__c.field-meta.xml
<CustomField>
    <fullName>Books_and_Records_Text__c</fullName>
    <label>Books and Records Text</label>
    <type>TextArea</type>
</CustomField>