force-app/main/default/objects/Assessment__c/fields/Community_Based_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Community_Based_Schedule__c</fullName>
    <label>Community-Based Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>