force-app/main/default/objects/Assessment__c/fields/Community_Based_Schedule_Text__c.field-meta.xml
<CustomField>
    <fullName>Community_Based_Schedule_Text__c</fullName>
    <label>Community-Based Schedule Text</label>
    <type>TextArea</type>
</CustomField>