force-app/main/default/objects/Assessment__c/fields/Competitive_Salary_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Salary_Ranges__c</fullName>
    <label>Competitive Salary Ranges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>