force-app/main/default/objects/Assessment__c/fields/Competitive_Salary_Ranges_Text__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Salary_Ranges_Text__c</fullName>
    <label>Competitive Salary Ranges Text</label>
    <type>TextArea</type>
</CustomField>