force-app/main/default/objects/Assessment__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Out of Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>