force-app/main/default/objects/Assessment__c/fields/Demographic_Info__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demographic Info</label>
    <type>Checkbox</type>
</CustomField>