force-app/main/default/objects/Assessment__c/fields/Expense_Data__c.field-meta.xml
<CustomField>
    <fullName>Expense_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Data</label>
    <type>Checkbox</type>
</CustomField>