force-app/main/default/objects/Assessment__c/fields/Fiscal_Year_Ended__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Ended__c</fullName>
    <label>Fiscal Year Ended</label>
    <type>Date</type>
</CustomField>