force-app/main/default/objects/Assessment__c/fields/Governing_Authority_of_Board__c.field-meta.xml
<CustomField>
    <fullName>Governing_Authority_of_Board__c</fullName>
    <label>Governing Authority of Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>