force-app/main/default/objects/Assessment__c/fields/Governing_Authority_of_Board_Text__c.field-meta.xml
<CustomField>
    <fullName>Governing_Authority_of_Board_Text__c</fullName>
    <label>Governing Authority of Board  Text</label>
    <type>TextArea</type>
</CustomField>