force-app/main/default/objects/Assessment__c/fields/Hide_Standards__c.field-meta.xml
<CustomField>
    <fullName>Hide_Standards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Standards</label>
    <type>Checkbox</type>
</CustomField>