force-app/main/default/objects/Assessment__c/fields/Inclusion_Recruitment_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_Recruitment_Plan_Text__c</fullName>
    <label>Inclusion Recruitment Plan Text</label>
    <type>TextArea</type>
</CustomField>