force-app/main/default/objects/Assessment__c/fields/Indemnification__c.field-meta.xml
<CustomField>
    <fullName>Indemnification__c</fullName>
    <label>Indemnification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>