force-app/main/default/objects/Assessment__c/fields/Indemnification_Text__c.field-meta.xml
<CustomField>
    <fullName>Indemnification_Text__c</fullName>
    <label>Indemnification Text</label>
    <type>TextArea</type>
</CustomField>