force-app/main/default/objects/Assessment__c/fields/Information_Management__c.field-meta.xml
<CustomField>
    <fullName>Information_Management__c</fullName>
    <label>Information Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>