force-app/main/default/objects/Assessment__c/fields/Information_Management_Text__c.field-meta.xml
<CustomField>
    <fullName>Information_Management_Text__c</fullName>
    <label>Information Management Text</label>
    <type>TextArea</type>
</CustomField>