force-app/main/default/objects/Assessment__c/fields/Monthly_Revenue_Data__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Revenue Data</label>
    <type>Checkbox</type>
</CustomField>