force-app/main/default/objects/Assessment__c/fields/Nondiscrimination_Provision__c.field-meta.xml
<CustomField>
    <fullName>Nondiscrimination_Provision__c</fullName>
    <label>Nondiscrimination Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>