force-app/main/default/objects/Assessment__c/fields/Nondiscrimination_Provision_Text__c.field-meta.xml
<CustomField>
    <fullName>Nondiscrimination_Provision_Text__c</fullName>
    <label>Nondiscrimination Provision Text</label>
    <type>TextArea</type>
</CustomField>