force-app/main/default/objects/Assessment__c/fields/Operations_Plan__c.field-meta.xml
<CustomField>
    <fullName>Operations_Plan__c</fullName>
    <label>Operations Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>