force-app/main/default/objects/Assessment__c/fields/Operations_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Operations_Plan_Text__c</fullName>
    <label>Operations Plan Text</label>
    <type>TextArea</type>
</CustomField>