force-app/main/default/objects/Assessment__c/fields/Personnel_Records__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Records__c</fullName>
    <label>Personnel Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>