force-app/main/default/objects/Assessment__c/fields/Personnel_Records_Text__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Records_Text__c</fullName>
    <label>Personnel Records Text</label>
    <type>TextArea</type>
</CustomField>