force-app/main/default/objects/Assessment__c/fields/Process_for_Amending__c.field-meta.xml
<CustomField>
    <fullName>Process_for_Amending__c</fullName>
    <label>Process for Amending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>