force-app/main/default/objects/Assessment__c/fields/Process_for_Amending_Text__c.field-meta.xml
<CustomField>
    <fullName>Process_for_Amending_Text__c</fullName>
    <label>Process for Amending Text</label>
    <type>TextArea</type>
</CustomField>