force-app/main/default/objects/Assessment__c/fields/Procurement_Policy__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Policy__c</fullName>
    <label>Procurement Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>