force-app/main/default/objects/Assessment__c/fields/Procurement_Policy_Text__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Policy_Text__c</fullName>
    <label>Procurement Policy Text</label>
    <type>TextArea</type>
</CustomField>