force-app/main/default/objects/Assessment__c/fields/Provisions__c.field-meta.xml
<CustomField>
    <fullName>Provisions__c</fullName>
    <label>Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>