force-app/main/default/objects/Assessment__c/fields/Provisions_Text__c.field-meta.xml
<CustomField>
    <fullName>Provisions_Text__c</fullName>
    <label>Provisions Text</label>
    <type>TextArea</type>
</CustomField>