force-app/main/default/objects/Assessment__c/fields/Quality_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assurance__c</fullName>
    <label>Quality Assurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>