force-app/main/default/objects/Assessment__c/fields/Quality_Assurance_Text__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assurance_Text__c</fullName>
    <label>Quality Assurance Text</label>
    <type>TextArea</type>
</CustomField>