force-app/main/default/objects/Assessment__c/fields/S10_Agency_Information_Management__c.field-meta.xml
<CustomField>
    <fullName>S10_Agency_Information_Management__c</fullName>
    <label>S10: Agency Information Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>