force-app/main/default/objects/Assessment__c/fields/S10_Agency_Information_Management_Text__c.field-meta.xml
<CustomField>
    <fullName>S10_Agency_Information_Management_Text__c</fullName>
    <label>S10: Agency Information Management Text</label>
    <type>TextArea</type>
</CustomField>