force-app/main/default/objects/Assessment__c/fields/S11_Outcomes_System__c.field-meta.xml
<CustomField>
    <fullName>S11_Outcomes_System__c</fullName>
    <label>S11: Outcomes System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>