force-app/main/default/objects/Assessment__c/fields/S11_Outcomes_System_Text__c.field-meta.xml
<CustomField>
    <fullName>S11_Outcomes_System_Text__c</fullName>
    <label>S11: Outcomes System Text</label>
    <type>TextArea</type>
</CustomField>