force-app/main/default/objects/Assessment__c/fields/S12_Document_Retention_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Document_Retention_Text__c</fullName>
    <label>S12: Document Retention Text</label>
    <type>TextArea</type>
</CustomField>