force-app/main/default/objects/Assessment__c/fields/S12_Eligibility_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Eligibility_Text__c</fullName>
    <label>S12: Eligibility Text</label>
    <type>TextArea</type>
</CustomField>