force-app/main/default/objects/Assessment__c/fields/S12_Enrollment_of_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>S12_Enrollment_of_Volunteer__c</fullName>
    <label>S12: Enrollment of Volunteer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>