force-app/main/default/objects/Assessment__c/fields/S12_Enrollment_of_Volunteer_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Enrollment_of_Volunteer_Text__c</fullName>
    <label>S12: Enrollment of Volunteer Text</label>
    <type>TextArea</type>
</CustomField>