force-app/main/default/objects/Assessment__c/fields/S12_Information_Management_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Information_Management_Text__c</fullName>
    <label>S12: Information Management Text</label>
    <type>TextArea</type>
</CustomField>