force-app/main/default/objects/Assessment__c/fields/S12_Inquiry_and_Orientation_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Inquiry_and_Orientation_Text__c</fullName>
    <label>S12: Inquiry and Orientation Text</label>
    <type>TextArea</type>
</CustomField>