force-app/main/default/objects/Assessment__c/fields/S12_Match_Supervision_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Match_Supervision_Text__c</fullName>
    <label>S12: Match Supervision Text</label>
    <type>TextArea</type>
</CustomField>