force-app/main/default/objects/Assessment__c/fields/S12_Outcomes_System_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Outcomes_System_Text__c</fullName>
    <label>S12: Outcomes System Text</label>
    <type>TextArea</type>
</CustomField>