force-app/main/default/objects/Assessment__c/fields/S12_Pre_match_Training__c.field-meta.xml
<CustomField>
    <fullName>S12_Pre_match_Training__c</fullName>
    <label>S12: Pre-match Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>