force-app/main/default/objects/Assessment__c/fields/S12_Pre_match_Training_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Pre_match_Training_Text__c</fullName>
    <label>S12: Pre-match Training Text</label>
    <type>TextArea</type>
</CustomField>