force-app/main/default/objects/Assessment__c/fields/S12_Pre_matching_Matching__c.field-meta.xml
<CustomField>
    <fullName>S12_Pre_matching_Matching__c</fullName>
    <label>S12: Pre-matching / Matching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>