force-app/main/default/objects/Assessment__c/fields/S12_Pre_matching_Matching_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Pre_matching_Matching_Text__c</fullName>
    <label>S12: Pre-matching / Matching Text</label>
    <type>TextArea</type>
</CustomField>