force-app/main/default/objects/Assessment__c/fields/S12_Quality_Assurance_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Quality_Assurance_Text__c</fullName>
    <label>S12: Quality Assurance Text</label>
    <type>TextArea</type>
</CustomField>