force-app/main/default/objects/Assessment__c/fields/S12_Reassessment_and_Rematch_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Reassessment_and_Rematch_Text__c</fullName>
    <label>S12: Reassessment and Rematch Text</label>
    <type>TextArea</type>
</CustomField>