force-app/main/default/objects/Assessment__c/fields/S12_Youth_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>S12_Youth_Outcomes__c</fullName>
    <label>S12: Youth Outcomes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>