force-app/main/default/objects/Assessment__c/fields/S12_Youth_Outcomes_Text__c.field-meta.xml
<CustomField>
    <fullName>S12_Youth_Outcomes_Text__c</fullName>
    <label>S12: Youth Outcomes Text</label>
    <type>TextArea</type>
</CustomField>