force-app/main/default/objects/Assessment__c/fields/S13_Non_Discrimination_of_Children__c.field-meta.xml
<CustomField>
    <fullName>S13_Non_Discrimination_of_Children__c</fullName>
    <label>S13: Non-Discrimination of Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>