force-app/main/default/objects/Assessment__c/fields/S13_Non_Discrimination_of_Children_Text__c.field-meta.xml
<CustomField>
    <fullName>S13_Non_Discrimination_of_Children_Text__c</fullName>
    <label>S13: Non-Discrimination of Children Text</label>
    <type>TextArea</type>
</CustomField>