force-app/main/default/objects/Assessment__c/fields/S13_Staff_Non_Discrimination__c.field-meta.xml
<CustomField>
    <fullName>S13_Staff_Non_Discrimination__c</fullName>
    <label>S13: Staff Non-Discrimination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>