force-app/main/default/objects/Assessment__c/fields/S13_Staff_Non_Discrimination_Text__c.field-meta.xml
<CustomField>
    <fullName>S13_Staff_Non_Discrimination_Text__c</fullName>
    <label>S13: Staff Non-Discrimination Text</label>
    <type>TextArea</type>
</CustomField>