force-app/main/default/objects/Assessment__c/fields/S14_Child_Eligibility_Criteria_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Child_Eligibility_Criteria_Text__c</fullName>
    <label>S14: Child Eligibility Criteria Text</label>
    <type>TextArea</type>
</CustomField>