force-app/main/default/objects/Assessment__c/fields/S14_Demographics_of_the_Children__c.field-meta.xml
<CustomField>
    <fullName>S14_Demographics_of_the_Children__c</fullName>
    <label>S14: Demographics of the Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>