force-app/main/default/objects/Assessment__c/fields/S14_Demographics_of_the_Children_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Demographics_of_the_Children_Text__c</fullName>
    <label>S14: Demographics of the Children Text</label>
    <type>TextArea</type>
</CustomField>