force-app/main/default/objects/Assessment__c/fields/S14_Description_Mission__c.field-meta.xml
<CustomField>
    <fullName>S14_Description_Mission__c</fullName>
    <label>S14: Description of Mission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>