force-app/main/default/objects/Assessment__c/fields/S14_Description_Mission_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Description_Mission_Text__c</fullName>
    <label>S14: Description of Mission Text</label>
    <type>TextArea</type>
</CustomField>