force-app/main/default/objects/Assessment__c/fields/S14_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>S14_Eligibility_Criteria__c</fullName>
    <label>S14: Eligibility Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>