force-app/main/default/objects/Assessment__c/fields/S14_Non_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>S14_Non_Exclusion__c</fullName>
    <label>S14 Non-Exclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>