force-app/main/default/objects/Assessment__c/fields/S14_Non_Exclusion_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Non_Exclusion_Text__c</fullName>
    <label>S14 Non-Exclusion Text</label>
    <type>TextArea</type>
</CustomField>