force-app/main/default/objects/Assessment__c/fields/S14_Review_Enrollment_Process__c.field-meta.xml
<CustomField>
    <fullName>S14_Review_Enrollment_Process__c</fullName>
    <label>S14: Review Enrollment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>