force-app/main/default/objects/Assessment__c/fields/S14_Review_Enrollment_Process_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Review_Enrollment_Process_Text__c</fullName>
    <label>S14: Review Enrollment Process Text</label>
    <type>TextArea</type>
</CustomField>