force-app/main/default/objects/Assessment__c/fields/S14_Review_Parent_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>S14_Review_Parent_Enrollment__c</fullName>
    <label>S14: Review Parent Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>