force-app/main/default/objects/Assessment__c/fields/S14_Review_Parent_Enrollment_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_Review_Parent_Enrollment_Text__c</fullName>
    <label>S14: Review Parent Enrollment Text</label>
    <type>TextArea</type>
</CustomField>