force-app/main/default/objects/Assessment__c/fields/S14_School_Site_Based_Mentoring__c.field-meta.xml
<CustomField>
    <fullName>S14_School_Site_Based_Mentoring__c</fullName>
    <label>S14: School / Site-Based Mentoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>