force-app/main/default/objects/Assessment__c/fields/S14_School_Site_Based_Mentoring_Text__c.field-meta.xml
<CustomField>
    <fullName>S14_School_Site_Based_Mentoring_Text__c</fullName>
    <label>S14: School / Site-Based Mentoring Text</label>
    <type>TextArea</type>
</CustomField>