force-app/main/default/objects/Assessment__c/fields/S15_Assessment_of_Home__c.field-meta.xml
<CustomField>
    <fullName>S15_Assessment_of_Home__c</fullName>
    <label>S15: Assessment of Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>