force-app/main/default/objects/Assessment__c/fields/S15_Assessment_of_Home_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Assessment_of_Home_Text__c</fullName>
    <label>S15: Assessment of Home Text</label>
    <type>TextArea</type>
</CustomField>