force-app/main/default/objects/Assessment__c/fields/S15_Child_Enrollment_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Child_Enrollment_Text__c</fullName>
    <label>S15: Child Enrollment Text</label>
    <type>TextArea</type>
</CustomField>