force-app/main/default/objects/Assessment__c/fields/S15_Collateral_Information__c.field-meta.xml
<CustomField>
    <fullName>S15_Collateral_Information__c</fullName>
    <label>S15: Collateral Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Response</valueSetName>
    </valueSet>
</CustomField>