force-app/main/default/objects/Assessment__c/fields/S15_Collateral_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Collateral_Information_Text__c</fullName>
    <label>S15: Collateral Information Text</label>
    <type>TextArea</type>
</CustomField>