force-app/main/default/objects/Assessment__c/fields/S15_Parent_Interview_Text__c.field-meta.xml
<CustomField>
    <fullName>S15_Parent_Interview_Text__c</fullName>
    <label>S15: Parent Interview Text</label>
    <type>TextArea</type>
</CustomField>